# DesignMode

./: AbstractFactory.cpp  AbstractFactory.h  CMakeLists.txt  Facade.cpp  Facade.h  Factory.cpp  Factory.h  README.md  SimpleFactory.cpp  SimpleFactory.h  Singleton.cpp  Singleton.h  main.cpp
